--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
+    "i18next": "^23.11.5",
+    "i18next-resources-to-backend": "^1.2.1",
     "next": "14.2.4",
+    "next-i18n-router": "^5.5.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-i18next": "^14.1.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.2.4",
