--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "i18next": "^23.11.5",
     "i18next-resources-to-backend": "^1.2.1",
